torch/NN/parallel_scripts/slurm-3228755.out
WORLD_SIZE=4
MASTER_ADDR=i18n18
/var/spool/slurm/d/job3228755/slurm_script: line 24: /torch/.venv/bin/activate: No such file or directory
  File "test.py", line 134
    if rank == 0: print(f"Group initialized? {dist.is_initialized()}", flush=True)
  File "test.py", line 134
    if rank == 0: print(f"Group initialized? {dist.is_initialized()}", flush=True)
                                                                    ^
                                                                    ^
SyntaxError: invalid syntax
SyntaxError: invalid syntax
  File "test.py", line 134
    if rank == 0: print(f"Group initialized? {dist.is_initialized()}", flush=True)
  File "test.py", line 134
    if rank == 0: print(f"Group initialized? {dist.is_initialized()}", flush=True)
                                                                    ^
SyntaxError: invalid syntax
                                                                    ^
SyntaxError: invalid syntax
srun: error: i18n21: tasks 2-3: Exited with exit code 1
srun: error: i18n18: tasks 0-1: Exited with exit code 1
